--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,28 +21,28 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name : Step 1 - Checkout Main Branch from Github
+      - name : Step 1  Checkout Main Branch from Github
         uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Step 2 - Setup Java JDK
+      - name: Step 2  Setup Java JDK
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
 
       # Runs a set of commands using the runners shell
-      - name: Step 3 : Build Maven Project
+      - name: Step 3 Build Maven Project
         run: mvn -B package --file pom.xml
         
-     # Runs a set of commands using the runners shell
-     - name: Step 4 : List Current Directory
-       run: ls -a
+      # Runs a set of commands using the runners shell
+      - name: Step 4 List Current Directory
+        run: ls -a
         
-    # Runs a set of commands using the runners shell
-    - name: Step 5 : What is target folder ?
-      run: |
-        cd target
-        ls -a
+      # Runs a set of commands using the runners shell
+      - name: Step 5 What is target folder ?
+        run: |
+         cd target
+         ls -a
         
         
         
