--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,9 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Step 3 Build Maven Project
-        run: mvn -B package --file pom.xml
+        run: |
+           mvn -B package --file pom.xml
+           mkdir staging && cp target/*.jar staging
         
       # Runs a set of commands using the runners shell
       - name: Step 4 List Current Directory
@@ -43,6 +45,17 @@ jobs:
         run: |
          cd target
          ls -a
+         
+     # Runs a set of commands using the runners shell
+      - name: Step 6 Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          # Artifact name
+          name: github-actions-artifacts-JMeter-MLLP-TCP
+          # A file, directory or wildcard pattern that describes what to upload
+          path: staging
+          # The desired behavior if no files are found using the provided path.
+          retention-days: 90
         
         
         
